--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.18"
+    "tailwindcss": "^3.0.18",
+    "@babel/core": "7.16.12"
   }
 }
